# tda-iot-hack

./: .gitignore  .gitmodules  README.md
cheat/: Cheatsheet.md
cheat/device-sim/: Dockerfile.build  Dockerfile.run  build.sh
cheat/device-sim/src/: messages_complete.c  sim_d2c_complete.c
cheat/func/EventHubTriggerCSharp/: project.json  run.csx
device-sim/: .gitignore  CMakeLists.txt  LICENSE  README.md
device-sim/src/: config.c  contoso.pb.c  contoso.pb.h  contoso.proto  messages.c  sim_d2c.c  sim_main.c  slogging.c
device-sim/src/inc/: config.h  messages.h  sim_all.h  slogging.h
func/EventHubTriggerCSharp/: function.json
